<resources>
    <string name="app_name">Ewidencja środków trwałych</string>
    <string name="beginWorkButtonText">Rozpocznij/Kontynuuj pracę</string>
    <string name="synchronizeButtonText">Wyślij wykonaną pracę</string>
    <string name="clearButtonText">Pobierz/wyczyść środowisko pracy</string>
    <string name="addButtonContent">Dodaj</string>
    <string name="removeButtonContent">Usuń</string>
    <string name="pickEmployeeTitle">Wybierz pracownika którego chcesz dodać:</string>
    <string name="confirmLogin">Wprowadź</string>
    <string name="changeLogin">Zmień</string>
    <string name="loginStatusDefault">Aby rozpocząć pracę musisz wprowadzić nazwę użytkownika, który wprowadza zmiany.</string>
	<string name="resolveConflictButton">Rozwiąż konflikt</string>
	<string name="conflictsPageHeader">Przypisania powodujące konflikty:</string>
</resources>
