<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:stretchColumns="1">
    
    <TableRow >
        <TextView 
            android:text="@string/app_name" 
            android:width="320dip" 
            android:height="50dip"
            android:textSize="20dip" />
        </TableRow>
    <TableRow >
        <Button
            android:id="@+id/beginButton"
            android:layout_gravity="center"
            android:height="70dip"
            android:width="250dip"
            android:text="@string/beginWorkButtonText" 
            android:onClick="onBeginWork" />

    </TableRow>
    <TableRow>
        <Button
            android:id="@+id/synchronizeButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:height="70dip"
            android:width="250dip"
            android:text="@string/synchronizeButtonText" 
            android:onClick="onSynchronize"/>
    </TableRow>
    <TableRow>
        <Button
            android:id="@+id/clearButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:height="70dip"
            android:width="250dip"
            android:text="@string/clearButtonText" 
            android:onClick="onClear"/>
    </TableRow>
    <TableRow>
    <View
    android:layout_width="fill_parent"
    android:layout_height="1dp"
    android:background="@android:color/darker_gray"/>
    </TableRow>
    <TableRow 
        android:layout_marginTop="10dip"
            android:layout_marginBottom="10dip">

        <TextView
            android:id="@+id/loginStatus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/loginStatusDefault"
            android:textAppearance="?android:attr/textAppearanceMedium" />
    </TableRow>
    <TableRow
            android:layout_marginTop="10dip"
            android:layout_marginBottom="10dip">

        <EditText
            android:id="@+id/userLogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:visibility="gone"
            android:inputType="textPersonName" >

            <requestFocus />
        </EditText>

    </TableRow>
    <TableRow>
        <Button
            android:id="@+id/loginButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:height="50dip"
            android:width="150dip"
            android:text="@string/confirmLogin" 
            android:onClick="onLogin"/>
    </TableRow>
</TableLayout>